@@ -1,3 +1,6 @@
+  [Graeme Weatherill]
+  * Adds/Modifies Ry0 and Rx calculator for multi-surface typology using the Generalized Coordinate System (GC2)
+  
   [Michele Simionato]
   * Added a simple argument parser in baselib
   * Replaced pydoc.locate with a call to importlib to work around a QGIS issue
